[lib]
crate-type = ["cdylib", "staticlib"]
name = "math"

[package]
name = "math-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
uniffi = { version = "0.29.4", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }

[[bin]]
name = "uniffi_bindgen"
path = "./src/uniffi_bindgen.rs"